[gd_scene load_steps=8 format=3 uid="uid://reee4p6te6d0"]

[ext_resource type="Script" uid="uid://d18b4q0bgiqrn" path="res://Entities/Bomber/bomb.gd" id="1_i3wnd"]
[ext_resource type="Texture2D" uid="uid://cxaypve6do0rq" path="res://Entities/Bomber/bomb.png" id="1_lqplk"]
[ext_resource type="Texture2D" uid="uid://cpv21uk03em0k" path="res://Entities/Bomber/explosion.png" id="3_pqsq2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_enpi5"]
atlas = ExtResource("1_lqplk")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_fabm0"]
atlas = ExtResource("3_pqsq2")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_kwe8u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_enpi5")
}],
"loop": true,
"name": &"bomb",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fabm0")
}],
"loop": true,
"name": &"explode",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_tucr8"]
radius = 3.0

[node name="Bomb" type="RigidBody2D" groups=["Enemy"]]
collision_layer = 4
script = ExtResource("1_i3wnd")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_kwe8u")
animation = &"explode"
autoplay = "bomb"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_tucr8")

[node name="ExplosionTimer" type="Timer" parent="."]
wait_time = 2.612
autostart = true

[node name="ExplodeDurationTimer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="timeout" from="ExplosionTimer" to="." method="_on_explosion_timer_timeout"]
[connection signal="timeout" from="ExplodeDurationTimer" to="." method="_on_explode_duration_timer_timeout"]
